Add a slider class to update the frequency, and add the accelerometer and magnetometer

--- a/project/Orientation/Base.lproj/Main_iPhone.storyboard
+++ b/project/Orientation/Base.lproj/Main_iPhone.storyboard
@@ -83,6 +83,26 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="fGo-3V-tVw">
+                                <rect key="frame" x="18" y="275" width="284" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="takeSliderValueFrom:" destination="vXZ-lx-hvc" eventType="valueChanged" id="hWj-nR-d45"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Frequency" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZF-QJ-GDo">
+                                <rect key="frame" x="49" y="316" width="81" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Frequency" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mk-Jp-rGl">
+                                <rect key="frame" x="145" y="316" width="94" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -93,6 +113,8 @@
                         <outlet property="Y2" destination="UWz-Kz-mTY" id="Vfe-1O-VQs"/>
                         <outlet property="Z1" destination="T9f-gq-aHj" id="NF5-V7-PfZ"/>
                         <outlet property="Z2" destination="m5r-kz-hK5" id="71B-RC-E1w"/>
+                        <outlet property="updateFrequencyLabel" destination="8mk-Jp-rGl" id="gBr-gx-7wN"/>
+                        <outlet property="updateFrquencySlider" destination="fGo-3V-tVw" id="HBT-CZ-IoV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
