--- a/project/Orientation/Base.lproj/Main_iPhone.storyboard
+++ b/project/Orientation/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B3116" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -48,16 +48,6 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GtE-Uo-BUV">
-                                <rect key="frame" x="114" y="394" width="57" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Begin">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="begin" destination="vXZ-lx-hvc" eventType="touchDown" id="R6M-5N-2cs"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Vector of Tracking Y-axis" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZn-cZ-uIZ">
                                 <rect key="frame" x="49" y="159" width="190" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -87,7 +77,7 @@
                                 <rect key="frame" x="18" y="275" width="284" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <action selector="takeSliderValueFrom:" destination="vXZ-lx-hvc" eventType="valueChanged" id="hWj-nR-d45"/>
+                                    <action selector="startUpdatesWithSliderValue:" destination="vXZ-lx-hvc" eventType="valueChanged" id="d3J-RS-vjc"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Frequency" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZF-QJ-GDo">
@@ -113,8 +103,7 @@
                         <outlet property="Y2" destination="UWz-Kz-mTY" id="Vfe-1O-VQs"/>
                         <outlet property="Z1" destination="T9f-gq-aHj" id="NF5-V7-PfZ"/>
                         <outlet property="Z2" destination="m5r-kz-hK5" id="71B-RC-E1w"/>
-                        <outlet property="updateFrequencyLabel" destination="8mk-Jp-rGl" id="gBr-gx-7wN"/>
-                        <outlet property="updateFrquencySlider" destination="fGo-3V-tVw" id="HBT-CZ-IoV"/>
+                        <outlet property="updateFrequencyLabel" destination="8mk-Jp-rGl" id="7UH-XT-S3d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
